--- a/rabbitmq-demo/src/main/resources/application.yml
+++ b/rabbitmq-demo/src/main/resources/application.yml
@@ -4,14 +4,14 @@ spring:
   rabbitmq:
     host: localhost
     password: guest
-    port: 5672
+    port: 15672
     username: guest
 #    exchange: hi1object.exchange
 #    queue: hi1object.queue
 #    routingkey: hi1object.routingkey
 
 rabbitmq:
-  queue: hi1object.queue
-  exchange: hi1object.exchange
+  queue: hi1object.routingkey
+  exchange: hi1object.routingkey
   routingkey: hi1object.routingkey
 
